[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
wasm-bindgen = "0.2.91"
